TaskConrtoller And UserController tests done!